# tinyHttpServer

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/config/: config.h
src/file/: file.cpp  file.h
src/http/: http.cpp  http.h
src/server/: server.cpp  server.h
src/utils/: utils.cpp  utils.h
